--- a/public/skills.html
+++ b/public/skills.html
@@ -44,7 +44,7 @@
 </main>
 
 <footer>
-    <p>Contact me at <a href="mailto:email@example.com">email@example.com</a></p>
+    <p>Contact me at <a href="mailto:Matichai062@gmail.com">Matichai062@gmail.com</a></p>
 </footer>
 
 </body>
